--- a/less/footer.less
+++ b/less/footer.less
@@ -5,9 +5,7 @@ footer{
   .links{
     height: 50px;
     width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    .flexE();
 
     a{
       color: @mainFont;
@@ -15,9 +13,8 @@ footer{
     }
   }
   .copyright{
+    .flex();
     color: @mainFont;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
   }
 }
