--- a/less/nav.less
+++ b/less/nav.less
@@ -2,9 +2,7 @@ nav{
   width: 100%;
   height: 60px;
   background-color: @nav;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  .flexB();
 
   .logo{
     height: 100%;
@@ -14,8 +12,6 @@ nav{
   }
 
   .navigation{
-    display: flex;
-    align-items: center;
 
     a{
       color: @mainFont;
