--- a/less/main.less
+++ b/less/main.less
@@ -1,40 +1,31 @@
 *{
-  margin: 0;
+  margin:0;
 }
 
 html{
   background-color: @background;
-  width: 100%;
+  width:100%;
 }
 
 html,body{
   height: 100%;
-  margin: 0;
 }
 
 h1,h2,h3,h4,h5,h6,p,a{
   font-family: Roboto;
 }
 
-h1,h2,h3,h4,h5,h6,p{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
-}
-
 #wrapper{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+  min-width: 100%;
 }
 
 .splash{
-  min-height: 500px;
+  height: 500px;
   background-image: url("../assets/images/marvels-guardians-of-the-galaxy-4k-wallpaper-3840x2160-uhdpaper.com-533.1_a.jpg");
   background-size: cover;
   background-position: center;
 
-  @media screen and (min-width:900px){
+  @media screen and (min-width: 900px){
     background-size: 100% auto;
   }
 
@@ -43,61 +34,50 @@ h1,h2,h3,h4,h5,h6,p{
     width: 100%;
     color: @mainFont;
     background-color: rgba(89, 72, 150, 0.65);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    .flexC();
   }
 }
 
 .full{
   min-height: 300px;
+
   background-color: @fullContent;
   color: @contentFont;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .flex();
 
   p{
     margin:30px;
     width:400px;
+    text-align: justify;
     @media screen and (min-width:800px){
-      width:600px;
-    }
-    @media screen and (min-width:1024px){
       width:800px;
     }
   }
 
 }
+
 .content{
-  min-height: 800px;
+  min-height: 900px;
   background-color: @halfContent;
   color: @contentFont;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
+  .flexE();
 
   .box{
-    width: 100%;
-    min-height: 300px;
+    margin: 10px 10px;
+    height:400px;
+    width:450px;
     border-radius:8px;
     background-color: @fullContent;
     color: @contentFont;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
+    padding-top:5px;
+    .flexC();
 
     .imgBox{
-      height: 300px;
-      width: 400px;
+      height:300px;
+      width:400px;
       border: 3px @mainFont solid;
       border-radius: 10px;
-      overflow: hidden;
+      overflow:hidden;
     }
   }
 
