--- a/less/style.css
+++ b/less/style.css
@@ -2,28 +2,28 @@
   font-family: Roboto;
   src: url(../assets/fonts/Roboto-Regular.ttf);
 }
-nav {
-  width: 100%;
-  height: 60px;
-  background-color: #7b0738;
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.flexB {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-nav .logo {
-  height: 100%;
-}
-nav .logo img {
-  height: 90%;
-}
-nav .navigation {
+.flexC {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
-nav .navigation a {
-  color: white;
-  text-decoration: none;
-  margin-right: 50px;
+.flexE {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
 * {
   margin: 0;
@@ -35,7 +35,6 @@ html {
 html,
 body {
   height: 100%;
-  margin: 0;
 }
 h1,
 h2,
@@ -47,24 +46,11 @@ p,
 a {
   font-family: Roboto;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
-}
 #wrapper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+  min-width: 100%;
 }
 .splash {
-  min-height: 500px;
+  height: 500px;
   background-image: url("../assets/images/marvels-guardians-of-the-galaxy-4k-wallpaper-3840x2160-uhdpaper.com-533.1_a.jpg");
   background-size: cover;
   background-position: center;
@@ -80,8 +66,9 @@ p {
   color: white;
   background-color: rgba(89, 72, 150, 0.65);
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 .full {
@@ -89,42 +76,40 @@ p {
   background-color: #aaabfd;
   color: black;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 .full p {
   margin: 30px;
   width: 400px;
+  text-align: justify;
 }
 @media screen and (min-width: 800px) {
-  .full p {
-    width: 600px;
-  }
-}
-@media screen and (min-width: 1024px) {
   .full p {
     width: 800px;
   }
 }
 .content {
-  min-height: 800px;
+  min-height: 900px;
   background-color: #594896;
   color: black;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
 }
 .content .box {
-  width: 100%;
-  min-height: 300px;
+  margin: 10px 10px;
+  height: 400px;
+  width: 450px;
   border-radius: 8px;
   background-color: #aaabfd;
   color: black;
+  padding-top: 5px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 .content .box .imgBox {
@@ -133,6 +118,25 @@ p {
   border: 3px white solid;
   border-radius: 10px;
   overflow: hidden;
+}
+nav {
+  width: 100%;
+  height: 60px;
+  background-color: #7b0738;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .logo {
+  height: 100%;
+}
+nav .logo img {
+  height: 90%;
+}
+nav .navigation a {
+  color: white;
+  text-decoration: none;
+  margin-right: 50px;
 }
 footer {
   width: 100%;
@@ -144,15 +148,16 @@ footer .links {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
 }
 footer .links a {
   color: white;
   text-decoration: none;
 }
 footer .copyright {
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
